<resources>
    <string name="app_name">OneTake</string>
    <string name="ALERT_140_CHARS">限制：140个字</string>
    <string name="ALERT_18_CHARS">限制：18 个字符</string>
    <string name="ALERT_3_ALBUMS">限制：每张作品只能加入 3 个相册</string>
    <string name="ALERT_3_ALBUMS_ALREADY">%s被加入了过多相册</string>
    <string name="ALERT_5_COAUTHORS_LIMIT">限制：最多 5 名合作者</string>
    <string name="ALERT_ADD_TO_ALBUM_SUCCEED">成功添加作品</string>
    <string name="ALERT_ANDROID_PERMISSION_STORAGE_5">无法访问本地储存空间</string>
    <string name="ALERT_BLOCKED">已加入黑名单</string>
    <string name="ALERT_COMMENT_COPIED">评论已复制</string>
    <string name="ALERT_FILE_SAVED_FAIL">导出%s失败</string>
    <string name="ALERT_GIF_SAVED">保存成功</string>
    <string name="ALERT_INVITE_CODE_COPIED">邀请码已拷贝</string>
    <string name="ALERT_LOGIN_PLEASE">请先登录</string>
    <string name="ALERT_PAYMENT_FAIL">购买失败</string>
    <string name="ALERT_PAYMENT_SUCCESS">购买成功</string>
    <string name="ALERT_REACHED_FOLLOWING_LIMIT">已达关注数量上限</string>
    <string name="ALERT_READY_TO_ANSWER_A_CALL">请准备接听电话</string>
    <string name="ALERT_REMOVE_FROM_ALBUM_SUCCEED">成功移除作品</string>
    <string name="ALERT_REPORTED">已举报</string>
    <string name="ALERT_TOO_MANY_TEXTS">今日已请求过多短信</string>
    <string name="ALERT_UNBLOCKED">已解除黑名单</string>
    <string name="ALERT_UPDATE_FAILED">更新失败</string>
    <string name="ALERT_URL_COPIED">链接已复制</string>
    <string name="ANDROID_CANCELLED_DEVICE">设备已放弃领取</string>
    <string name="ANDROID_CANCELLED_USER">用户已放弃领取</string>
    <string name="ANDROID_CLAIMED_DEVICE">设备已领取钻石</string>
    <string name="ANDROID_CLAIMED_USER">用户已领取钻石</string>
    <string name="ANDROID_DIAMONDS_CANCEL">没兴趣</string>
    <string name="ANDROID_DIAMONDS_CLAIM">领取</string>
    <string name="ANDROID_DIAMONDS_SIGN_IN_TO_CLAIM">登录领取</string>
    <string name="ANDROID_ERROR_DEVICE">设备错误</string>
    <string name="BUTTON_ADD_FRIENDS">值得关注的人</string>
    <string name="BUTTON_ADD_FROM_ALBUM">"Live Photo
或视频"</string>
    <string name="BUTTON_ADD_MY_GIF">添加作品</string>
    <string name="BUTTON_ADD_PHONE_NUMBER">匹配好友</string>
    <string name="BUTTON_ADD_TEXT">文字</string>
    <string name="BUTTON_ADD_TO_ALBUM">加入相册</string>
    <string name="BUTTON_ALL_PICS">查看全部</string>
    <string name="BUTTON_AUDIO_DOWNLOADED_MUSIC">已下载</string>
    <string name="BUTTON_AUDIO_EDIT_ADD">添加</string>
    <string name="BUTTON_AUDIO_EDIT_ADD_CLIP">添加</string>
    <string name="BUTTON_AUDIO_EDIT_REMOVE">删除</string>
    <string name="BUTTON_AUDIO_EDIT_REPLACE">更换</string>
    <string name="BUTTON_AUDIO_EDIT_TRIM">编辑</string>
    <string name="BUTTON_AUDIO_EDIT_VOLUME">音量</string>
    <string name="BUTTON_AUDIO_MY_MUSIC">我的音乐</string>
    <string name="BUTTON_AUDIO_OTHER_MUSIC">其他</string>
    <string name="BUTTON_AUDIO_TAP_TO_ADD_MUSIC">点击添加音乐</string>
    <string name="BUTTON_AVATAR_ALBUM">照片</string>
    <string name="BUTTON_AVATAR_CAMERA">相机</string>
    <string name="BUTTON_AVATAR_GIF">动图</string>
    <string name="BUTTON_BLOCK">加入黑名单</string>
    <string name="BUTTON_CANCEL">取消</string>
    <string name="BUTTON_CHANGE_PASSWORD">修改密码</string>
    <string name="BUTTON_CHAT_STRANGER_MESSAGE_MULTIPLE">来自 %s 位陌生人</string>
    <string name="BUTTON_CHAT_STRANGER_MESSAGE_ONE">来自 1 位陌生人</string>
    <string name="BUTTON_CLEAN_CACHE">清除缓存</string>
    <string name="BUTTON_COMMENT">评论</string>
    <string name="BUTTON_COPY">复制</string>
    <string name="BUTTON_COPY_TO_CLIPBOARD">拷贝</string>
    <string name="BUTTON_COPY_URL">复制链接</string>
    <string name="BUTTON_CORNER_INBOX">收件箱</string>
    <string name="BUTTON_CORNER_PRESETS">滤镜</string>
    <string name="BUTTON_CORNER_PUSH">推送</string>
    <string name="BUTTON_CORNER_SETTINGS">设置</string>
    <string name="BUTTON_DECO">装饰</string>
    <string name="BUTTON_DELETE">删除</string>
    <string name="BUTTON_DONE">完成</string>
    <string name="BUTTON_DRAFT_SAVED">已保存</string>
    <string name="BUTTON_EDITORS_CHOICE">精选</string>
    <string name="BUTTON_EDIT_ALBUM">编辑相册</string>
    <string name="BUTTON_EDIT_GIF_CAPTION">编辑作品描述</string>
    <string name="BUTTON_EFFECTS">效果</string>
    <string name="BUTTON_EFFECT_BEAUTY">美颜</string>
    <string name="BUTTON_EFFECT_CONTRAST">对比度</string>
    <string name="BUTTON_EFFECT_CROP">剪裁</string>
    <string name="BUTTON_EFFECT_EXPOSURE">曝光</string>
    <string name="BUTTON_EFFECT_FADE">褪色</string>
    <string name="BUTTON_EFFECT_GRAINS">颗粒</string>
    <string name="BUTTON_EFFECT_HIGHTLIGHTS_SAVE">高光</string>
    <string name="BUTTON_EFFECT_HORIZONTAL_PERSPECTIVE">水平</string>
    <string name="BUTTON_EFFECT_LIGHT_LEAK">漏光</string>
    <string name="BUTTON_EFFECT_MIRROR">镜像</string>
    <string name="BUTTON_EFFECT_MIRROR_BOTTOM">下</string>
    <string name="BUTTON_EFFECT_MIRROR_LEFT">左</string>
    <string name="BUTTON_EFFECT_MIRROR_RIGHT">右</string>
    <string name="BUTTON_EFFECT_MIRROR_TOP">上</string>
    <string name="BUTTON_EFFECT_NONE">无</string>
    <string name="BUTTON_EFFECT_ROTATE">旋转</string>
    <string name="BUTTON_EFFECT_ROTATE_90_DEGREES">旋转 90 度</string>
    <string name="BUTTON_EFFECT_SATURATION">饱和度</string>
    <string name="BUTTON_EFFECT_SHADOWS_SAVE">阴影</string>
    <string name="BUTTON_EFFECT_SHARPEN">锐化</string>
    <string name="BUTTON_EFFECT_SKY">天空</string>
    <string name="BUTTON_EFFECT_STRENGTH">强度</string>
    <string name="BUTTON_EFFECT_TILT">柔边</string>
    <string name="BUTTON_EFFECT_VERTITAL_PERSPECTIVE">垂直</string>
    <string name="BUTTON_EFFECT_VIGNETTE">暗角</string>
    <string name="BUTTON_EFFECT_VIGNETTE_CAMERA">相机</string>
    <string name="BUTTON_EFFECT_VIGNETTE_LOMO">Lomo</string>
    <string name="BUTTON_EFFECT_VIGNETTE_MOVIE">电影</string>
    <string name="BUTTON_EFFECT_WHITE_BALANCE">色温</string>
    <string name="BUTTON_EFFECT_WHITE_TINT">色调</string>
    <string name="BUTTON_ENABLE_PUSH">启用推送通知</string>
    <string name="BUTTON_EXPOSURE">曝光补偿</string>
    <string name="BUTTON_FAV_PRESETS">收藏</string>
    <string name="BUTTON_FEEDBACK_SUBMIT">提交</string>
    <string name="BUTTON_FILTERS">滤镜</string>
    <string name="BUTTON_FOLLOW">关注</string>
    <string name="BUTTON_FOLLOWED">已关注</string>
    <string name="BUTTON_FOLLOW_EACH">互相关注</string>
    <string name="BUTTON_FOLLOW_HER">关注她</string>
    <string name="BUTTON_FOLLOW_HIM">关注他</string>
    <string name="BUTTON_FORGOT_PASSWORD">忘记密码？</string>
    <string name="BUTTON_FRAME">画幅</string>
    <string name="BUTTON_FRAME_FULL">完整</string>
    <string name="BUTTON_FRAME_RATIO">比例</string>
    <string name="BUTTON_FRAME_SQUARE">正方形</string>
    <string name="BUTTON_FRAME_WIDESCREEN">宽银幕</string>
    <string name="BUTTON_GET_LOCATION_INFO">获取位置</string>
    <string name="BUTTON_GIF_DOWNLOADING">下载中…</string>
    <string name="BUTTON_GIF_RETRY">下载失败, 点此重试</string>
    <string name="BUTTON_GLOBAL">城市精选: </string>
    <string name="BUTTON_GOT_IT">好的</string>
    <string name="BUTTON_GO_TO_USER">%s 的个人页面</string>
    <string name="BUTTON_IMPORT">导入</string>
    <string name="BUTTON_IMPORT_ALBUM_PHOTOS">图片</string>
    <string name="BUTTON_IMPORT_ALBUM_VIDEO">视频</string>
    <string name="BUTTON_IMPORT_DRAFT_SELECT">多选</string>
    <string name="BUTTON_IMPORT_DRAFT_SELECT_CANCEL">取消</string>
    <string name="BUTTON_IMPORT_LENGTH_FREE">自由</string>
    <string name="BUTTON_IMPORT_LENGTH_SECONDS"> 秒</string>
    <string name="BUTTON_IMPORT_MULTIPLE_IMAGES_DELETE">删除</string>
    <string name="BUTTON_IMPORT_MULTIPLE_IMAGES_UNSELECT">取消选择</string>
    <string name="BUTTON_INVISIBLE_LOCATION">隐身</string>
    <string name="BUTTON_JOIN">加入</string>
    <string name="BUTTON_KEEP_CAMERA_SETTINGS">保留相机设置</string>
    <string name="BUTTON_KEEP_WARTER_MARK_SETTINGS">水印</string>
    <string name="BUTTON_LEAVE">退出相册</string>
    <string name="BUTTON_LIKE">赞</string>
    <string name="BUTTON_LOOP">循环</string>
    <string name="BUTTON_LOOP_FORWARD">正序</string>
    <string name="BUTTON_LOOP_OVERLAY">过渡</string>
    <string name="BUTTON_LOOP_REBOUND">反弹</string>
    <string name="BUTTON_LOOP_REVERSE">倒播</string>
    <string name="BUTTON_MODE_GIF">动图</string>
    <string name="BUTTON_MODE_PHOTO">照片</string>
    <string name="BUTTON_MODIFY_PROFILE">修改个人资料</string>
    <string name="BUTTON_MORE_INFO">更多</string>
    <string name="BUTTON_MUSIC_STORE_FREE">下载</string>
    <string name="BUTTON_MUSIC_STORE_USE">使用</string>
    <string name="BUTTON_NEARBY_PHOTOS">附近作品</string>
    <string name="BUTTON_NEW_ALBUM">新建相册</string>
    <string name="BUTTON_NEXT">继续</string>
    <string name="BUTTON_NO_PRESET">无滤镜</string>
    <string name="BUTTON_PLAYER_TAP_FOR_SOUND">点击播放声音</string>
    <string name="BUTTON_PLAYING_AUDIO">播放中…</string>
    <string name="BUTTON_PLAY_AUDIO">收听</string>
    <string name="BUTTON_PRESET_CURRENT">当前段落</string>
    <string name="BUTTON_PRESET_DOWNLOAD">滤镜下载</string>
    <string name="BUTTON_PRESET_GLOBAL">全局设置</string>
    <string name="BUTTON_PRESET_REORDER">排序</string>
    <string name="BUTTON_PRESET_STORE_ENTRY">下载</string>
    <string name="BUTTON_PRESET_STORE_FAIL_DOWNLOAD">下载失败</string>
    <string name="BUTTON_PRESET_STORE_FAIL_PURCHASE">购买失败</string>
    <string name="BUTTON_PRESET_STORE_FREE">免费</string>
    <string name="BUTTON_PRESET_STORE_NOT_ENOUGH_DIAMONDS">余额不足</string>
    <string name="BUTTON_PRESET_STORE_PAY_ALIPAY">支付宝支付</string>
    <string name="BUTTON_PRESET_STORE_PAY_WECHAT">微信支付</string>
    <string name="BUTTON_PRESET_STORE_PRESET_COUNT">%s 款滤镜</string>
    <string name="BUTTON_PRESET_STORE_PRESET_DOWNLOAD">下载</string>
    <string name="BUTTON_PRESET_STORE_PRESET_DOWNLOADED">已下载</string>
    <string name="BUTTON_PRESET_STORE_PRESET_DOWNLOADING">下载中…</string>
    <string name="BUTTON_PRESET_STORE_PURCHASE_DIAMONDS">购买钻石</string>
    <string name="BUTTON_PRIVATE">仅自己可见</string>
    <string name="BUTTON_PUBLISH">发布</string>
    <string name="BUTTON_PUSH_NOTIFICATIONS">推送通知</string>
    <string name="BUTTON_PUSH_SETTINGS">设置推送通知</string>
    <string name="BUTTON_PUSH_SHORTCUT_CLOSE">关闭</string>
    <string name="BUTTON_PUSH_SHORTCUT_FOLLOW">关注</string>
    <string name="BUTTON_PUSH_SHORTCUT_REPLY">回复</string>
    <string name="BUTTON_RATE_AT_APP_STORE">在 App Store 给“一闪”打分</string>
    <string name="BUTTON_READ_ARTICLE">专题</string>
    <string name="BUTTON_REMAINING_TIME">剩余:</string>
    <string name="BUTTON_REMOVE_FROM_ALBUM">移出相册</string>
    <string name="BUTTON_REPORT">举报</string>
    <string name="BUTTON_RESEND">重发</string>
    <string name="BUTTON_RETRY">重试</string>
    <string name="BUTTON_RETRY_SENDING">重试</string>
    <string name="BUTTON_SAVE_CAMERA_ROLL">保存到手机中</string>
    <string name="BUTTON_SAVE_DRAFT">保存草稿</string>
    <string name="BUTTON_SAVE_GIF">GIF</string>
    <string name="BUTTON_SAVE_PHOTO">照片</string>
    <string name="BUTTON_SAVE_PREPARING"> (准备中...)</string>
    <string name="BUTTON_SAVE_TO_PHONE">存至手机</string>
    <string name="BUTTON_SAVE_UPLOADING"> (上传中...)</string>
    <string name="BUTTON_SAVE_VIDEO">视频</string>
    <string name="BUTTON_SEND_COMMENT">发送</string>
    <string name="BUTTON_SEND_PRIVATE_MESSAGE">发私信</string>
    <string name="BUTTON_SETTINGS_INVITE_CODES">邀请</string>
    <string name="BUTTON_SHARE">分享</string>
    <string name="BUTTON_SIGN_IN">登录</string>
    <string name="BUTTON_SIGN_IN_SIGN_UP">注册与登录</string>
    <string name="BUTTON_TEXT_COMBO_CHAPTER">章节</string>
    <string name="BUTTON_TEXT_COMBO_INFO">信息</string>
    <string name="BUTTON_TEXT_COMBO_RESET">重置</string>
    <string name="BUTTON_TEXT_COMBO_SUBTITLE">字幕</string>
    <string name="BUTTON_TEXT_COMBO_TITLE">片头</string>
    <string name="BUTTON_VIDEO_EDIT_EFFECTS">效果</string>
    <string name="BUTTON_VIDEO_EDIT_REMOVE">删除</string>
    <string name="BUTTON_VIDEO_EDIT_REORDER">排序</string>
    <string name="BUTTON_VIDEO_EDIT_SPLIT">切割</string>
    <string name="BUTTON_VIDEO_EDIT_TEXT">加字</string>
    <string name="LABEL_EFFECT_DATE">日期</string>
    <string name="LABEL_EFFECT_DUST">灰尘</string>
    <string name="LABEL_EFFECT_PRISM">色散</string>
</resources>